<resources>
    <string name="app_name">GitHub User</string>
    <string name="name">The Name</string>
    <string name="username">username</string>
    <plurals name="numberOfRepository">
        <item quantity="one">%d repository</item>
        <item quantity="other">%d repositories</item>
    </plurals>
    <plurals name="numberOfFollower">
        <item quantity="one">%d follower</item>
        <item quantity="other">%d followers</item>
    </plurals>
    <plurals name="numberOfFollowing">
        <item quantity="other">%d following</item>
    </plurals>
    <string name="repository">repository</string>
    <string name="followers_following" translatable="false">%1$s %2$s %3$s</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="search_hint">Insert Username</string>
    <plurals name="numberOfRepositoryShareUser">
        <item quantity="one">I found a great GitHub user with username %1$s who has %2$d repository!\nCheck it out https://github.com/%1$s</item>
        <item quantity="other">I found a great GitHub user with username %1$s who has %2$d repositories!\nCheck it out https://github.com/%1$s</item>
    </plurals>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="change_language">Change Language</string>
    <string name="reset_user_list">Reset User List</string>
    <string name="developer_name" translatable="false">Okugata Fahmi</string>
    <string name="developer_username" translatable="false">okugatafahmi</string>
    <string name="about_developer">About Developer</string>
    <string name="favorite">Favorites</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="key_reminder" translatable="false">reminder</string>
    <string name="reminder_title_nine">Repeating reminder at 09:00</string>
    <string name="reminder_title">Repeating reminder at %1$s</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="key_language" translatable="false">language</string>
    <string name="about">About</string>
    <string name="key_developer" translatable="false">developer</string>
    <string name="find_user">Let\'s find popular user on Github!</string>
    <string name="reminder_set">Repeating reminder set up at %1$s</string>
    <string name="reminder_canceled">Repeating reminder canceled</string>
    <string name="reminder_time" translatable="false">09:00</string>

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>
</resources>