<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_settings"
        android:title="@string/change_language_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset_list"
        android:title="@string/reset_user_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about_developer"
        android:title="@string/about_developer"
        app:showAsAction="never"/>
</menu>